k3s/manifests/wildfly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wildfly
  template:
    metadata:
      labels:
        app: wildfly
    spec:
        containers:
          - name: wildfly
            image: my-wildfly:latest
            imagePullPolicy: Never
            ports:
              - containerPort: 8080
              - containerPort: 9990
