k3s/manifests/sshubuntu-endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: traefik-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 213.171.26.124
    ports:
      - port: 30080
