k3s/manifests/sshubuntu-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30080
